[package]
name = "rivals_aes_dumper"
version = "1.6.0"
edition = "2024"
authors = ["natimerry"]

[lib]
name = "rivals_aes_dumper"
crate-type = ["cdylib"]

[dependencies]
libwinexploit = {git = "https://github.com/natimerry/libwinexploit", features = ["runtime"]}

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
strip = true
